--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -89,3 +89,9 @@
 
 @import "default";
 @import "halo";
+
+.navUser-section {
+    .navUser-action--currencySelector {
+        display: none;
+    }
+}
