--- a/templates/pages/contact-us.html
+++ b/templates/pages/contact-us.html
@@ -72,15 +72,6 @@
                         {{> components/page/contact-us-form}}
                     </div>
                     <div class="contact-form__col contact-form--right">
-                        <h3 class="contact-form-title">Live Help</h3>
-                        <p class="contact-form-text">
-                            If you have an issue or question that requires immediate assistance, you can click the button below to chat live with a Customer Service representative. If we aren’t available, drop us an email to the left and we will get back to you within 20-36 hours!
-                        </p>
-
-                        <a href="#" class="contact-form__button button uppercase">
-                            Message us
-                        </a>
-
                         <div class="contact-form__info">
                             <p class="contact-form-text contact-form-text-icon contact-form-text-icon-phone">
                                 <span class="banner__icon">
@@ -107,7 +98,7 @@
                             <p class="contact-form-text">
                                 Opening Hours
                                 <br>
-                                MON to FRI: 8:00 AM - 17:00 PM
+                                Mon to Fri:  9 am - 5 pm EST
                             </p>
                         </div>
                     </div>
@@ -117,7 +108,7 @@
     </div>
 
     <section class="contact-map">
-        <div class="contact-map__header">
+        <div style="display: none;" class="contact-map__header">
             <h3 class="contact-map__title">Find Store Location Near you</h3>
             <p class="contact-map__text">
                 We have 06 stores throughout “Country” and more in works. Complete the search details below to find a Ella store near you.
