--- a/templates/pages/custom/page/about-us-layout.html
+++ b/templates/pages/custom/page/about-us-layout.html
@@ -164,7 +164,7 @@
                             <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/image-banner-1.png" alt="Image Banner 1">
                         </a>
 
-                        <div class="banner-video-popup" data-video-link="https://www.youtube.com/watch?v=_9VUPq3SxOc">
+                        <div class="banner-video-popup" data-video-link="https://www.midwestseasaltcompany.com/content/about-store-video.mp4">
                             <button type="button" class="video-button" data-type="youtube" data-src="_9VUPq3SxOc" aspect_ratio="56%" aria-label="Click to watch video" style="--color: #ffffff;" tabindex="0">
                                 <svg aria-hidden="true" viewBox="0 0 200 200">
                                     <circle cx="100" cy="100" r="90" fill="none" stroke-width="8"></circle>
@@ -187,7 +187,7 @@
                             <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/image-banner-2.png" alt="Image Banner 2">
                         </a>
 
-                        <div class="banner-video-popup" data-video-link="https://www.youtube.com/watch?v=_9VUPq3SxOc">
+                        <div class="banner-video-popup">
                             <button type="button" class="video-button" data-type="youtube" data-src="_9VUPq3SxOc" aspect_ratio="56%" aria-label="Click to watch video" style="--color: #ffffff;" tabindex="0">
                                 <svg aria-hidden="true" viewBox="0 0 200 200">
                                     <circle cx="100" cy="100" r="90" fill="none" stroke-width="8"></circle>
@@ -210,7 +210,7 @@
                             <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/image-banner-3.png" alt="Image Banner 3">
                         </a>
 
-                        <div class="banner-video-popup" data-video-link="https://www.youtube.com/watch?v=_9VUPq3SxOc">
+                        <div class="banner-video-popup">
                             <button type="button" class="video-button" data-type="youtube" data-src="_9VUPq3SxOc" aspect_ratio="56%" aria-label="Click to watch video" style="--color: #ffffff;" tabindex="0">
                                 <svg aria-hidden="true" viewBox="0 0 200 200">
                                     <circle cx="100" cy="100" r="90" fill="none" stroke-width="8"></circle>
@@ -267,13 +267,13 @@
 
                         <p class="banner__text">
                             Opening Hours
-                            MON to FRI: 8:00 AM - 17:00 PM
+                            Mon to Fri: 9 am - 5 pm EST
                         </p>
                     </div>
 
                     <div class="content-box__divider"></div>
                     <div class="content-col col--right">
-                        <a href="#" class="button button--live-chat custom-contact-us-button">Live Chat</a>
+                        <!-- <a href="#" class="button button--live-chat custom-contact-us-button">Live Chat</a> -->
                         <a href="#" class="button button--primary custom-contact-us-button">Contact Us</a>
                     </div>
                 </div>
