--- a/templates/pages/custom/page/custom-bulk-wholesale-page.html
+++ b/templates/pages/custom/page/custom-bulk-wholesale-page.html
@@ -31,16 +31,16 @@
 <!-- WHAT IS BULK & WHOLESALE -->
 <section class="custom-section bg-black rounded-top mt-30">
     <div class="container-1920">
-        <div class="flex flex-center-y flex-col-reverse-mb">
-            <div class="block-content max-wfull-mb">
-                <h3 class="custom-heading text-blue text-center-mb mb-0-mb">WHAT IS BULK & WHOLESALE</h3>
-                <p class="custom-text text-center-mb text-white">
+        <div class="flex flex-center-y flex-col-reverse-mb flex-col-tablet-reverse">
+            <div class="block-content max-wfull-mb wfull-tablet">
+                <h3 class="custom-heading text-blue text-center-mb mb-0-mb wfull-tablet mt-20-tablet text-center-tablet">WHAT IS BULK & WHOLESALE</h3>
+                <p class="custom-text text-center-mb text-white text-center-tablet wfull-tablet">
                     We first want to start with the definition of bulk and wholesale as often this is confused with private labeling. Our Bulk and Wholesale program consists of formulas that are sold in large quantities. So, if you are looking for a custom formula or a stock formula but don’t need retail packaging then this would fall under our bulk & wholesale program. This program is popular with hospitality end users, spa owners, as well as companies that want to do their packaging. If you would like to complete the final retail product and just need great formulas, then you have found the last company you will ever need.
                 </p>
             </div>
 
-            <div class="block-image pl-40 pl-0-mb">
-                <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/bulk-and-wholesale.png" class="img-cover" alt="Bulk And Wholesale">
+            <div class="block-image pl-40 pl-0-mb wfull-tablet p-0-tablet">
+                <img class="wfull-tablet" src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/bulk-and-wholesale.png" class="img-cover" alt="Bulk And Wholesale">
             </div>
         </div>
     </div>
@@ -49,14 +49,14 @@
 <!-- Minumum orders quanties -->
 <section class="custom-section bg-white rounded-top mt-30">
     <div class="container-1920">
-        <div class="flex flex-center-y flex-col-mb">
-            <div class="block-image">
-                <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/minimum-order-quantities1.png" class="img-cover" alt="Minimum Order Quantities">
+        <div class="flex flex-center-y flex-col-mb flex-col-tablet">
+            <div class="block-image wfull-tablet">
+                <img class="wfull-tablet" src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/minimum-order-quantities1.png" class="img-cover" alt="Minimum Order Quantities">
             </div>
 
-            <div class="block-content max-wfull-mb pl-40 pl-0-mb">
-                <h3 class="custom-heading text-blue text-center-mb mb-0-mb">MINIMUM ORDER QUANTITIES</h3>
-                <p class="custom-text text-center-mb">
+            <div class="block-content max-wfull-mb pl-40 pl-0-mb wfull-tablet p-0-tablet">
+                <h3 class="custom-heading text-blue text-center-mb mb-0-mb wfull-tablet text-center-tablet mt-20-tablet">MINIMUM ORDER QUANTITIES</h3>
+                <p class="custom-text text-center-mb wfull-tablet text-center-tablet">
                     This is usually the first question that gets asked regarding ordering in bulk and wholesale. You can order products from us in any quantity, but our discounted pricing starts at 250 pounds per SKU (variation). Just like with our private label program, our bulk program allows you to have fully customized blends tailored to your needs. We make every product to order, so you have full control over any specific formulation requirements. Request our pricelist above and get a detailed brochure and our pricelist.
                 </p>
             </div>
@@ -67,15 +67,15 @@
 <!-- About us -->
 <section class="custom-section bg-black rounded-top mt-30">
     <div class="container-1920">
-        <div class="flex flex-center-y flex-col-reverse-mb">
-            <div class="block-content max-wfull-mb">
-                <h3 class="custom-heading text-blue text-center-mb mb-0-mb">ABOUT US</h3>
-                <p class="custom-text text-center-mb text-white">
+        <div class="flex flex-center-y flex-col-reverse-mb flex-col-tablet-reverse">
+            <div class="block-content max-wfull-mb wfull-tablet">
+                <h3 class="custom-heading text-blue text-center-mb mb-0-mb mt-20-tablet text-center-tablet wfull-tablet">ABOUT US</h3>
+                <p class="custom-text text-center-mb text-white text-center-tablet wfull-tablet">
                     So, do you need bath & body products in bulk? Our bulk and wholesale department at The Midwest Sea Salt Company is the best you will find. Our 50,000-square-foot automated facility consistently manufactures and ships bulk products daily. We supply some of the largest companies in the world who do not need retail packaged products. Either these clients will package themselves or they will use the bulk products in their day-to-day operations. We are here to do as much or as little as you need us to. So, if you run a thriving bed & breakfast, a hotel chain, a spa, or just want to save cost and package and label products yourself, you have come to the right place.
                 </p>
             </div>
 
-            <div class="block-image pl-40 pl-0-mb">
+            <div class="block-image pl-40 pl-0-mb wfull-tablet p-0-tablet">
                 <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/bulk-about-us.png" class="img-cover" alt="ABOUT US">
             </div>
         </div>
@@ -85,14 +85,14 @@
 <!-- About Our Products -->
 <section class="custom-section bg-white rounded-top mt-30">
     <div class="container-1920">
-        <div class="flex flex-center-y flex-col-mb">
-            <div class="block-image">
-                <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/bulk-about-our-product.png" class="img-cover" alt="About Our Products">
+        <div class="flex flex-center-y flex-col-mb flex-col-tablet">
+            <div class="block-image wfull-tablet">
+                <img class="wfull-tablet" src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/bulk-about-our-product.png" class="img-cover" alt="About Our Products">
             </div>
 
-            <div class="block-content max-wfull-mb pl-40 pl-0-mb">
-                <h3 class="custom-heading text-blue text-center-mb mb-0-mb">About Our Products</h3>
-                <p class="custom-text text-center-mb">
+            <div class="block-content max-wfull-mb pl-40 pl-0-mb p-0-tablet wfull-tablet">
+                <h3 class="custom-heading text-blue text-center-mb mb-0-mb wfull-tablet text-center-tablet mt-20-tablet">About Our Products</h3>
+                <p class="custom-text text-center-mb wfull-tablet text-center-tablet">
                     Our products are made to the highest standard in our fully automated facility. We can source exotic ingredients and deal with complex formulation needs. So, if you need your product all-natural, organic, paraben-free, etc. we can accommodate your request. It is our goal to take your vision for your formula and bring it to reality. Quality, value, and consistency are at the core of our Bulk and Wholesale divisions. We have dedicated formulators, project managers, and QC experts who work to fulfill your every bulk need. 
                 </p>
             </div>
