--- a/templates/pages/custom/page/custom-private-label-page.html
+++ b/templates/pages/custom/page/custom-private-label-page.html
@@ -50,26 +50,26 @@
 <section class="custom-section custom-section--about-us bg-white rounded-top mt-30">
     <div class="container-1920">
         <div class="custom-section-about-us">
-            <div class="about-us__item about-us__item--top flex flex-center-y pb-60 pb-20-tl flex-col-reverse-mb">
-                <div class="item item__left pr-0-mb">
-                    <h4 class="text-blue item__heading text-center-mb mb-0-mb">About Us</h4>
-                    <p class="item__desc pr-0-mb text-center-mb">
+            <div class="about-us__item about-us__item--top flex flex-center-y pb-60 pb-20-tl flex-col-reverse-mb flex-col-tablet-reverse">
+                <div class="item item__left pr-0-mb p-0-tablet wfull-tablet">
+                    <h4 class="text-blue item__heading text-center-mb mb-0-mb text-center-tablet mt-20-tablet">About Us</h4>
+                    <p class="item__desc pr-0-mb text-center-mb text-center-tablet">
                         Starting from scratch to develop your skincare or cosmetics lines can be difficult, time-consuming, and extremely costly. You can bring your concept to The Midwest Sea Salt Company Inc. rather than starting from scratch. You can significantly reduce your effort by partnering with a seasoned private label manufacturer who specializes in skincare formulation, product design, packaging, packing, and delivery. We will assist you in ensuring that goods are produced consistently for your brand.
                     </p>
                 </div>
 
-                <div class="item item__right pl-0-mb">
-                    <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/about-us-top.png" alt="About Us Top Banner">
+                <div class="item item__right pl-0-mb p-0-tablet wfull-tablet">
+                    <img class="wfull-tablet" src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/about-us-top.png" alt="About Us Top Banner">
                 </div>
             </div>
 
-            <div class="about-us__item about-us__item--bottom flex flex-center-y flex-col-mb">
-                <div class="item item__left pr-0-mb">
-                    <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/about-us-bottom.png" alt="About Us Top Banner">
+            <div class="about-us__item about-us__item--bottom flex flex-center-y flex-col-mb flex-col-tablet">
+                <div class="item item__left pr-0-mb p-0-tablet wfull-tablet">
+                    <img class="wfull-tablet" src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/about-us-bottom.png" alt="About Us Top Banner">
                 </div>
 
-                <div class="item item__right pl-0-mb pt-20-tl">
-                    <p class="item__desc text-center-mb">
+                <div class="item item__right pl-0-mb pt-20-tl p-0-tablet wfull-tablet">
+                    <p class="item__desc text-center-mb text-center-tablet">
                         We manufacture more than 18,000 SKUs and private label for more than 500+ companies. We cover the range from startups, all the way to Fortune 500 hospitality entities. Our clients' products cover the market, in retailers such as Whole Foods, Amazon, Walmart, Trader Joe's, Sephora, Target, Ulta, Sally’s, Dermstore, Nordstrom, Neiman Marcus, Walgreens, CVS, Rite-Aid… and so many more. 
                     </p>
                 </div>
@@ -81,10 +81,10 @@
 <!-- Section Minimum Order Quantities -->
 <section class="custom-section bg-black rounded-top mt-30">
     <div class="container-1920">
-        <div class="flex flex-center-y flex-row-reverse flex-col-reverse-mb">
-            <div class="block-content max-wfull-mb pl-40 pl-0-mb">
-                <h3 class="custom-heading text-blue text-center-mb mb-0-mb">Minimum Order Quantities</h3>
-                <p class="custom-text text-white text-center-mb">
+        <div class="flex flex-center-y flex-row-reverse flex-col-reverse-mb flex-col-tablet">
+            <div class="block-content max-wfull-mb pl-40 pl-0-mb wfull-tablet mb-20-tablet">
+                <h3 class="custom-heading text-blue text-center-mb mb-0-mb text-center-tablet p-0-tablet wfull-tablet">Minimum Order Quantities</h3>
+                <p class="custom-text text-white text-center-mb text-center-tablet p-0-tablet wfull-tablet">
                     We wanted to create a dedicated section for this as it is usually a common initial question. We have the lowest MOQ in the industry for a fully automated facility that manufactures to our standard. For products in a jar or a bottle, the MOQ is 500 units per variation. If we are creating custom pouches for you, which we can do in-house, the MOQ is 1000 units per variation. It is important to us to try and lower the barriers to entry to this market and our MOQ certainly helps us live up to that initiative.
                 </p>
             </div>
@@ -101,18 +101,18 @@
     <div class="container-1920">
         <div class="flex flex-wrap flex-col-reverse-mb">
             <div class="flex flex-col-mb">
-                <div class="max-580 pb-60 pb-20-tl pr-60 pr-20-tl flex-1 p-0-mb">
+                <div class="max-580 pb-60 pb-20-tl pr-60 pr-20-tl flex-1 p-0-mb initial-cost-outlay__heading">
                     <h3 class="custom-heading text-blue text-center-mb mb-0-mb">INITIAL <br class="hide-on-mobile"> COST OUTLAY</h3>
                 </div>
-                <div class="block-image pb-60 pb-0-mb">
+                <div class="block-image pb-60 pb-0-mb initial-cost-outlay__content">
                     <div class="flex flex-col flex-wrap ml-0 grid no-gap mb-0">
                         <div class="row">
-                            <div class="col l-2 m-1 s-1 pl-60 pr-60 pb-40 pl-20-tl pr-20-tl pb-20-tl max-640 wfull flex-1 pl-0-mb">
+                            <div class="col l-2 m-1 s-1 pl-60 pr-60 pb-40 pl-20-tl pr-20-tl pb-20-tl max-640 wfull flex-1 pl-0-mb wfull-tablet">
                                 <p class="custom-text text-center-mb">
                                     This is where we outshine our competition and any other custom manufacturer of skincare products. Being that our MOQ is already an industry minimum, you had better believe that the initial cost outlay is an industry-breaking low as well. Our full private labeling service projects start at roughly $2500 and can go up from there depending on the product you are  trying to make. So, for example, a 16oz bath salt with a full custom formula at 500 units with your custom label would start at about $2500.
                                 </p>
                             </div>
-                            <div class="col l-2 m-1 s-1 pl-60 pb-40 pl-20-tl pb-20-tl max-580 pl-0-mb">
+                            <div class="col l-2 m-1 s-1 pl-60 pb-40 pl-20-tl pb-20-tl max-580 pl-0-mb wfull-tablet">
                                 <p class="custom-text text-center-mb">
                                     On the other end of the spectrum, a Dead Sea mud mask would cost roughly $3500 for a full complete product. The price varies widely depending on what you need us to make. Please note that we manufacture a product based on your needs and we are not selling you a premade product. We can go as mild or as wild as you need us to.
                                 </p>
@@ -131,15 +131,15 @@
 <!-- Section Getting started -->
 <section class="custom-section bg-black rounded-top mt-30">
     <div class="container-1920">
-        <div class="flex flex-center-y flex-row-reverse flex-col-reverse-mb">
-            <div class="block-content max-wfull-mb pl-40 pl-0-mb">
-                <h3 class="custom-heading text-blue text-center-mb mb-0-mb">GETTING STARTED</h3>
-                <p class="custom-text text-white text-center-mb">
+        <div class="flex flex-center-y flex-row-reverse flex-col-reverse-mb flex-col-tablet-reverse">
+            <div class="block-content max-wfull-mb pl-40 pl-0-mb wfull-tablet p-0-tablet">
+                <h3 class="custom-heading text-blue text-center-mb mb-0-mb mt-20-tablet text-center-tablet">GETTING STARTED</h3>
+                <p class="custom-text text-white text-center-mb text-center-tablet">
                     This is the easy part. Fill out the form to download our brochure and pricelist and then send us an email with your ideas. It is really that simple. That is all it takes. We will take your idea and needs and create a project scope that outlays all the product details and the cost associated with the project. What’s stopping?
                 </p>
             </div>
 
-            <div class="block-image">
+            <div class="block-image wfull-tablet">
                 <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/packaging-and-labeling.png" class="img-cover" alt="GETTING STARTED">
             </div>
         </div>
@@ -150,16 +150,16 @@
 <!-- PACKAGING AND LABELING -->
 <section class="custom-section bg-white rounded-top mt-30 custom-section-two-block">
     <div class="container-1920">
-        <div class="flex flex-center-y flex-col-reverse-mb">
-            <div class="block-content max-wfull-mb">
-                <h3 class="custom-heading text-blue text-center-mb mb-0-mb">PACKAGING AND LABELING</h3>
-                <p class="custom-text text-center-mb">
+        <div class="flex flex-center-y flex-col-reverse-mb flex-col-tablet-reverse">
+            <div class="block-content max-wfull-mb wfull-tablet">
+                <h3 class="custom-heading text-blue text-center-mb mb-0-mb text-center-tablet mt-20-tablet">PACKAGING AND LABELING</h3>
+                <p class="custom-text text-center-mb text-center-tablet">
                     We pride ourselves on being a one-stop shop should you require it. With that being said, we can procure all your packaging and print your labels in-house. You can also supply us with these components as well. Whether you need PET plastic, glass, or interior seals, we can handle it all for you.
                 </p>
             </div>
 
-            <div class="block-image pl-40 pl-0-mb">
-                <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/packaging-and-labeling.png" class="img-cover" alt="PACKAGING AND LABELING">
+            <div class="block-image pl-40 pl-0-mb wfull-tablet p-0-tablet">
+                <img class="wfull-tablet" src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/packaging-and-labeling.png" class="img-cover" alt="PACKAGING AND LABELING">
             </div>
         </div>
     </div>
@@ -168,10 +168,10 @@
 <!-- PRIVATE LABEL - READY -->
 <section class="custom-section bg-black rounded-top mt-30 custom-section-two-block">
     <div class="container-1920">
-        <div class="flex flex-row-reverse flex-center-y flex-col-reverse-mb">
-            <div class="block-content max-wfull-mb pl-40 pl-0-mb">
-                <h3 class="custom-heading text-blue text-center-mb mb-0-mb">PRIVATE LABEL - READY</h3>
-                <p class="custom-text text-center-mb text-white pb-20">
+        <div class="flex flex-row-reverse flex-center-y flex-col-reverse-mb flex-col-tablet-reverse">
+            <div class="block-content max-wfull-mb pl-40 pl-0-mb wfull-tablet p-0-tablet">
+                <h3 class="custom-heading text-blue text-center-mb mb-0-mb text-center-tablet mt-20-tablet p-0-tablet">PRIVATE LABEL - READY</h3>
+                <p class="custom-text text-center-mb text-white pb-20 p-0-tablet text-center-tablet wfull-tablet">
                     A new program that has become very popular is our private label-ready program. So, what if you are not ready to order 500 units of a single SKU because you are just starting, or your budget just doesn’t allow it? No worries at all. Everyone must start somewhere, and we have a new program just for you. It is an entry point to private labeling that will reduce the MOQ to six units but will require you to label the product.
                 </p>
 
@@ -180,8 +180,8 @@
                 </p>
             </div>
 
-            <div class="block-image">
-                <img src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/private-label-ready2.png" class="img-cover" alt="PRIVATE LABEL - READY">
+            <div class="block-image wfull-tablet">
+                <img class="wfull-tablet" src="https://cdn11.bigcommerce.com/s-9a83a/images/stencil/original/image-manager/private-label-ready2.png" class="img-cover" alt="PRIVATE LABEL - READY">
             </div>
         </div>
     </div>
