--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -207,6 +207,11 @@
     max-width: 520px;
     flex: 0 0 30%;
 
+    @media (min-width: 1025px) and (max-width: 1600px) {
+        flex: 0 0 50%;
+        width: 100%;
+    }
+
     @media (max-width: 1024px) {
         flex: 0 0 50%;
     }
@@ -420,7 +425,9 @@
 }
 
 .max-580 {
-    max-width: 580px !important;
+    @media (min-width: 768px) {
+        max-width: 580px !important;
+    }
 }
 
 .max-640 {
@@ -579,6 +586,54 @@
         flex: unset;
     }
 }
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .flex-col-tablet {
+        flex-direction: column !important;
+    }
+    
+    .flex-col-tablet-reverse {
+        flex-direction: column-reverse !important;
+    }
+
+    .p-0-tablet {
+        padding: 0 !important;
+    }
+
+    .pt-0-tablet {
+        padding-top: 0 !important;
+    }
+
+    .pb-0-tablet {
+        padding-bottom: 0 !important;
+    }
+
+    .pl-0-tablet {
+        padding-left: 0 !important;
+    }
+
+    .pr-0-tablet {
+        padding-right: 0 !important;
+    }
+
+    .wfull-tablet {
+        width: 100% !important;
+        max-width: 100% !important;
+    }
+
+    .text-center-tablet {
+        text-align: center !important;
+    }
+
+    .mt-20-tablet {
+        margin-top: 20px !important;
+    }
+
+    .mb-20-tablet {
+        margin-bottom: 20px !important;
+    }
+}
+
 
 .container-full {
     width: 100%;
